[tool.poetry]
name = "upciti"
version = "0.1.0"
description = "Technical test interview for upciti"
authors = ["Ouradze <me.raddadi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = "^21.7b0"
flake8 = "^3.9.2"
invoke = "^1.6.0"
ipdb = "^0.13.9"
isort = "^5.9.2"
mypy = "^0.910"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | docs
    | \.vscode
    | \.run
    | snapshots
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
combine_as_imports = true
lines_after_imports = 2
force_sort_within_sections = true
sections = '''
    FUTURE
    STDLIB
    THIRDPARTY
    FIRSTPARTY
    TESTS
    LOCALFOLDER
'''
skip = ".venv"
known_tests = "tests"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
